# mailbox

./: .travis.yml  README.md
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: error.rs  lib.rs
lib/tests/data/: sample.mail
