[package]
name = "mailbox-cli"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

[[bin]]
name = "maildap"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
chrono-english = "0.1"
clipboard = "0.5"
mailbox = { version= "0.1.0", path = "../lib" }
serde_json = "1.0"
structopt = "0.2"
syntect ="3.0"
humantime  = "1.2"
handlebars = "1.1"