[package]
name = "mailbox-cli"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "../README.md"
keywords = [
  "imap",
  "email"
]

[[bin]]
name = "mailbox"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
chrono-english = "0.1"
clipboard = "0.5"
env_logger = "0.6"
handlebars = "1.1"
humantime  = "1.2"
mailbox = { version= "0.1.0", path = "../lib" }
serde_json = "1.0"
structopt = "0.2"
syntect ="3.0"