[package]
name = "mailbox"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = [
  "imap",
  "email"
]
readme = "../README.md"

[dependencies]
base64 = "0.10"
failure = "0.1"
imap = "0.10"
log = "0.4"
mailparse = "0.6"
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }